fix: StreamStudy 요구사항 미션 완료